--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true
-spring.datasource.username=root 
-spring.datasource.password=
+
+# Configuration Base de données - UTILISER LES VARIABLES D'ENVIRONNEMENT
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Configuration Actuator
-management.endpoints.web.exposure.include=health,info,prometheus,metrics
+# Configuration Actuator - EXPOSER TOUS LES ENDPOINTS
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 
-# Server configuration :
+# Server configuration
 server.port=8089
 server.servlet.context-path=/student
